fix horizontal scrolling

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     flex-direction: column !important;
     height: 100%;
+    overflow-x: hidden;
 }
 
 .body * {
